hphp/hack/test/typecheck/as_expression/primitive2.php
<?hh

function g(int $x): void {}

function f(mixed $x): void {
  $y = $x ?as int;
  g($y);
}
